--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Poker Portfolio</title>
-    <base href="/Poker-Personal-Website/" />
+    <base href="/PersonalPortfolio/" />
     <script type="text/javascript">
         // Single Page Apps for GitHub Pages
         // MIT License
